# forge

./: .gitignore  Makefile  README.md  package.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  .gitignore  PROMPTS_API.md  README.md  deploy_secrets.sh  env.example  fly.toml  generate_schemas.py  pyproject.toml  pytest.ini  requirements.txt  seed_prompts.py  test_integration.py  test_prompts_api.py
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: chat.py  prompts.py  synthesize.py  system.py  webhook.py
backend/app/services/: ai_service.py  database.py  db_service.py  llm_service.py  prompt_test_service.py
backend/prompts/: chat_response.py  synthesis.py
backend/tests/: test_ai_service.py  test_database.py  test_health.py  test_models.py  test_webhook.py
frontend/: README.md  package.json  pnpm-lock.yaml  state.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/lib/: store.ts
frontend/prompts/: chat-response.ts  synthesis.ts  todos.ts
schemas/json/: _manifest.json  ai-prompt.json  ai-response-content.json  ai-synthesis-content.json  ai-synthesis-structured.json  contribution-type.json  contribution.json  error-response.json  forge-member.json  forge-status.json  forge.json  health-response.json  member-role.json  process-contribution-request.json  process-contribution-response.json  prompt-parameters.json  prompt-status.json  response-format.json  triage-action.json  triage-response.json  user-message-content.json
(+6 files in other folders)
